--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -11,6 +11,7 @@ $primarycolor: #D35266;
 $secondarycolor: #888888;
 $thirdcolor: #383838;
 $fourthcolor: #fcfcfc;
+$fifthcolor: #f6f6f6;
 
 
 //Typography
