--- a/src/css/main-style.css
+++ b/src/css/main-style.css
@@ -120,6 +120,7 @@
 }
 .main .hot-ads {
   width: 85%;
+  padding-bottom: 3rem;
 }
 .main .hot-ads .hot-container {
   align-items: center;
@@ -150,16 +151,30 @@
 .main .hot-ads .hot-ads-info {
   width: 70%;
   margin: 0;
-  border: 0.1rem solid #888888;
-  box-shadow: 0.3rem 0.5rem rgba(136, 128, 128, 0.1);
+  border-bottom: 0.1rem solid #888888;
+  border-right: 0.1rem solid #888888;
+  box-shadow: 1rem 0.5rem rgba(136, 128, 128, 0.1);
 }
 .main .hot-ads .hot-ads-info .hot-img {
   height: 30rem;
   width: 60rem;
+  position: relative;
 }
 .main .hot-ads .hot-ads-info .hot-img img {
   width: 100%;
   height: 100%;
+}
+.main .hot-ads .hot-ads-info .hot-img .img-arrow {
+  position: absolute;
+  bottom: 0;
+  right: 0;
+  background-color: #383838;
+  padding: 1rem 1.6rem;
+}
+.main .hot-ads .hot-ads-info .hot-img .img-arrow i {
+  color: #D35266;
+  padding: 0 0.8rem;
+  font-size: 2.5rem;
 }
 .main .hot-ads .hot-ads-info .hot-description {
   padding: 1rem 3rem;
@@ -204,6 +219,62 @@
   text-decoration: none;
   color: white;
 }
+.main .styles-section {
+  background-color: #f6f6f6;
+  padding: 3rem 0;
+}
+.main .styles-section .carrousel {
+  align-items: center;
+  padding: 2rem 0;
+}
+.main .styles-section .carrousel .carrousel-arrow {
+  font-size: 3.5rem;
+}
+.main .styles-section .carrousel .carrousel-container .item-carrousel {
+  border: 1px solid #888888;
+  background-color: white;
+  width: 20.2rem;
+}
+.main .styles-section .carrousel .carrousel-container .item-carrousel .img-carrousel img {
+  width: 20rem;
+}
+.main .styles-section .carrousel .carrousel-container .item-carrousel .carrousel-description {
+  text-align: start;
+  padding: 1rem;
+}
+.main .styles-section .carrousel .carrousel-container .item-carrousel .carrousel-description h4 {
+  font-size: 1.7rem;
+  color: #383838;
+}
+.main .styles-section .carrousel .carrousel-container .item-carrousel .carrousel-description p {
+  color: #D35266;
+  font-weight: bold;
+  margin: 0.5rem 0;
+}
+.main .styles-section .carrousel .carrousel-container .item-carrousel .carrousel-description span {
+  color: #383838;
+}
+.main .styles-section .carrousel .carrousel-container .item-carrousel .buttons-carrousel {
+  justify-content: space-between;
+  align-items: center;
+}
+.main .styles-section .carrousel .carrousel-container .item-carrousel .buttons-carrousel .plus,
+.main .styles-section .carrousel .carrousel-container .item-carrousel .buttons-carrousel .precio-b {
+  margin: 1rem 1rem;
+}
+.main .styles-section .carrousel .carrousel-container .item-carrousel .buttons-carrousel .plus {
+  background-color: transparent;
+  border: 1px solid #888888;
+}
+.main .styles-section .carrousel .carrousel-container .item-carrousel .buttons-carrousel .plus i {
+  color: #888888;
+  padding: 1.5rem;
+}
+.main .styles-section .carrousel .carrousel-container .item-carrousel .buttons-carrousel .precio-b {
+  color: #D35266;
+  font-size: 1.5rem;
+  font-weight: bold;
+}
 
 *,
 *::before,
@@ -220,6 +291,10 @@ html {
 
 .flex {
   display: flex;
+}
+
+.grid {
+  display: grid;
 }
 
 /*# sourceMappingURL=main-style.css.map */
