--- a/src/css/main-style.css
+++ b/src/css/main-style.css
@@ -222,58 +222,115 @@
 .main .styles-section {
   background-color: #f6f6f6;
   padding: 3rem 0;
+  height: 45rem;
+  width: 85%;
 }
 .main .styles-section .carrousel {
   align-items: center;
   padding: 2rem 0;
+  position: relative;
+  height: 91.5%;
 }
-.main .styles-section .carrousel .carrousel-arrow {
-  font-size: 3.5rem;
+.main .styles-section .carrousel input {
+  display: none;
 }
-.main .styles-section .carrousel .carrousel-container .item-carrousel {
+.main .styles-section .carrousel .slide_img {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  z-index: -1;
+}
+.main .styles-section .carrousel .slide_img .carrousel-container .item-carrousel {
   border: 1px solid #888888;
   background-color: white;
   width: 20.2rem;
 }
-.main .styles-section .carrousel .carrousel-container .item-carrousel .img-carrousel img {
+.main .styles-section .carrousel .slide_img .carrousel-container .item-carrousel .img-carrousel img {
   width: 20rem;
+  height: 20rem;
 }
-.main .styles-section .carrousel .carrousel-container .item-carrousel .carrousel-description {
+.main .styles-section .carrousel .slide_img .carrousel-container .item-carrousel .carrousel-description {
   text-align: start;
   padding: 1rem;
 }
-.main .styles-section .carrousel .carrousel-container .item-carrousel .carrousel-description h4 {
+.main .styles-section .carrousel .slide_img .carrousel-container .item-carrousel .carrousel-description h4 {
   font-size: 1.7rem;
   color: #383838;
 }
-.main .styles-section .carrousel .carrousel-container .item-carrousel .carrousel-description p {
+.main .styles-section .carrousel .slide_img .carrousel-container .item-carrousel .carrousel-description p {
   color: #D35266;
   font-weight: bold;
   margin: 0.5rem 0;
 }
-.main .styles-section .carrousel .carrousel-container .item-carrousel .carrousel-description span {
+.main .styles-section .carrousel .slide_img .carrousel-container .item-carrousel .carrousel-description span {
   color: #383838;
 }
-.main .styles-section .carrousel .carrousel-container .item-carrousel .buttons-carrousel {
+.main .styles-section .carrousel .slide_img .carrousel-container .item-carrousel .buttons-carrousel {
   justify-content: space-between;
   align-items: center;
 }
-.main .styles-section .carrousel .carrousel-container .item-carrousel .buttons-carrousel .plus,
-.main .styles-section .carrousel .carrousel-container .item-carrousel .buttons-carrousel .precio-b {
+.main .styles-section .carrousel .slide_img .carrousel-container .item-carrousel .buttons-carrousel .plus,
+.main .styles-section .carrousel .slide_img .carrousel-container .item-carrousel .buttons-carrousel .precio-b {
   margin: 1rem 1rem;
 }
-.main .styles-section .carrousel .carrousel-container .item-carrousel .buttons-carrousel .plus {
+.main .styles-section .carrousel .slide_img .carrousel-container .item-carrousel .buttons-carrousel .plus {
   background-color: transparent;
   border: 1px solid #888888;
 }
-.main .styles-section .carrousel .carrousel-container .item-carrousel .buttons-carrousel .plus i {
+.main .styles-section .carrousel .slide_img .carrousel-container .item-carrousel .buttons-carrousel .plus i {
   color: #888888;
   padding: 1.5rem;
 }
-.main .styles-section .carrousel .carrousel-container .item-carrousel .buttons-carrousel .precio-b {
+.main .styles-section .carrousel .slide_img .carrousel-container .item-carrousel .buttons-carrousel .precio-b {
   color: #D35266;
   font-size: 1.5rem;
   font-weight: bold;
+}
+.main .styles-section .carrousel .slide_img .prev, .main .styles-section .carrousel .slide_img .next {
+  width: 12%;
+  height: 100%;
+  position: absolute;
+  top: 0;
+  background-color: rgba(163, 163, 163, 0.7);
+  z-index: 99;
+  transition: 0.45s;
+  cursor: pointer;
+  text-align: center;
+}
+.main .styles-section .carrousel .slide_img .next {
+  right: 0;
+}
+.main .styles-section .carrousel .slide_img .prev {
+  left: 0;
+}
+.main .styles-section .carrousel .slide_img .prev:hover, .main .styles-section .carrousel .slide_img .next:hover {
+  transition: 0.3s;
+  background-color: rgba(209, 73, 107, 0.8);
+}
+.main .styles-section .carrousel .slide_img .prev span, .main .styles-section .carrousel .slide_img .next span {
+  position: absolute;
+  width: 0px;
+  height: 0px;
+  border: solid 20px;
+  top: 50%;
+  transform: translateY(-50%);
+}
+.main .styles-section .carrousel .slide_img .prev span {
+  border-color: transparent #383838 transparent transparent;
+  right: 35%;
+}
+.main .styles-section .carrousel .slide_img .next span {
+  border-color: transparent transparent transparent #383838;
+  left: 35%;
+}
+.main .styles-section .carrousel #i1:checked ~ #one,
+.main .styles-section .carrousel #i2:checked ~ #two,
+.main .styles-section .carrousel #i3:checked ~ #three {
+  z-index: 9;
+  animation: scroll 2s ease-in-out;
+}
+.main .styles-section .carrousel .carrousel-arrow {
+  font-size: 3.5rem;
 }
 
 *,
